manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      component: backend
  template:
    metadata:
      labels:
        app: myapp
        component: backend
    spec:
      containers:
      - name: myapp
        image: "digitalocean/flask-helloworld:latest"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15     
          periodSeconds: 20    
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10  
          periodSeconds: 5
