manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      component: frontend
  template:
    metadata:
      labels:
        app: myapp
        component: frontend
    spec:
      containers:
      - name: nginx-frontend
        image: "nginx:alpine"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15   
          periodSeconds: 20        
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10   
          periodSeconds: 5
        volumeMounts:
        - name: nginx-conf
          mountPath:  /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf                 
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
