manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: myapp      
    component: backend  
  ports:
  - port: 5000
    targetPort: 5000
